force-app/main/default/objects/Lead/fields/Comment_avez_vous_connu_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Comment_avez_vous_connu_Pickup__c</fullName>
    <label>Comment avez-vous connu Pickup ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>par des commerçants</fullName>
            </value>
            <value>
                <fullName>par vos clients</fullName>
            </value>
            <value>
                <fullName>par internet</fullName>
            </value>
            <value>
                <fullName>par des articles de presse</fullName>
            </value>
            <value>
                <fullName>par de la publicité presse</fullName>
            </value>
            <value>
                <fullName>par Colissimo</fullName>
            </value>
            <value>
                <fullName>par Chronopost</fullName>
            </value>
            <value>
                <fullName>par DPD France</fullName>
            </value>
            <value>
                <fullName>par Système U</fullName>
            </value>
            <value>
                <fullName>autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>