force-app/main/default/objects/Lead/fields/Commerce_eligible__c.field-meta.xml
<CustomField>
    <fullName>Commerce_eligible__c</fullName>
    <label>Commerce éligible</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>