force-app/main/default/objects/Lead/fields/Connexion_internet__c.field-meta.xml
<CustomField>
    <fullName>Connexion_internet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connexion internet</label>
    <type>Checkbox</type>
</CustomField>