force-app/main/default/objects/Lead/fields/Date_de_visite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_visite__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date de visite</label>
    <type>Date</type>
</CustomField>