force-app/main/default/objects/Lead/fields/ID_mission__c.field-meta.xml
<CustomField>
    <fullName>ID_mission__c</fullName>
    <label>ID mission</label>
    <length>15</length>
    <type>Text</type>
</CustomField>