force-app/main/default/objects/Lead/fields/Indice_de_localisation__c.field-meta.xml
<CustomField>
    <fullName>Indice_de_localisation__c</fullName>
    <label>Indice de localisation</label>
    <length>150</length>
    <type>Text</type>
</CustomField>