force-app/main/default/objects/Lead/fields/Langue_Principale_de_l_adresse__c.field-meta.xml
<CustomField>
    <fullName>Langue_Principale_de_l_adresse__c</fullName>
    <label>Langue Principale de l&#39;adresse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_LAN</valueSetName>
    </valueSet>
</CustomField>