force-app/main/default/objects/Lead/fields/Motif_d_ineligibilite__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_ineligibilite__c</fullName>
    <label>Motif d’inéligibilité </label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Commerce_eligible__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stockage insuffisant</fullName>
            </value>
            <value>
                <fullName>Moins de 35h</fullName>
            </value>
            <value>
                <fullName>Secteur d’activité</fullName>
            </value>
            <value>
                <fullName>Chaîne</fullName>
            </value>
            <value>
                <fullName>Commerce saisonnier</fullName>
            </value>
            <value>
                <fullName>Fermeture en semaine</fullName>
            </value>
            <value>
                <fullName>Fermeture le samedi</fullName>
            </value>
            <value>
                <fullName>Non francophone</fullName>
            </value>
            <value>
                <fullName>Pas de réseau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>