force-app/main/default/objects/Lead/fields/Motif_non_interesse__c.field-meta.xml
<CustomField>
    <fullName>Motif_non_interesse__c</fullName>
    <label>Motif non intéressé </label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interesse__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock insuffisant</fullName>
            </value>
            <value>
                <fullName>Rémunération trop faible</fullName>
            </value>
            <value>
                <fullName>Manque de temps</fullName>
            </value>
            <value>
                <fullName>Trop compliqué</fullName>
            </value>
            <value>
                <fullName>Présent à la concurrence</fullName>
            </value>
            <value>
                <fullName>Mauvaise expérience</fullName>
            </value>
            <value>
                <fullName>Mauvaise image de l&#39;activité relais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>