force-app/main/default/objects/Lead/fields/N_de_la_rue__c.field-meta.xml
<CustomField>
    <fullName>N_de_la_rue__c</fullName>
    <label>N° de la rue</label>
    <length>8</length>
    <type>Text</type>
</CustomField>