force-app/main/default/objects/Lead/fields/Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Partenaire__c</fullName>
    <label>Partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_de_point__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_PAR</valueSetName>
    </valueSet>
</CustomField>