force-app/main/default/objects/Lead/fields/Piste_convertie_vers_compte__c.field-meta.xml
<CustomField>
    <fullName>Piste_convertie_vers_compte__c</fullName>
    <defaultValue>true</defaultValue>
    <description>champ technique</description>
    <label>Piste convertie vers compte</label>
    <type>Checkbox</type>
</CustomField>