force-app/main/default/objects/Lead/fields/Reseau_Concurrent__c.field-meta.xml
<CustomField>
    <fullName>Reseau_Concurrent__c</fullName>
    <label>Réseau concurrent</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kiala</fullName>
            </value>
            <value>
                <fullName>Mondial Relay</fullName>
            </value>
            <value>
                <fullName>Relais Colis</fullName>
            </value>
            <value>
                <fullName>Relais Poste</fullName>
            </value>
            <value>
                <fullName>UPS Acces Point</fullName>
            </value>
            <value>
                <fullName>Kariboo</fullName>
            </value>
            <value>
                <fullName>Bpost</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>GLS</fullName>
            </value>
            <value>
                <fullName>MPL</fullName>
            </value>
            <value>
                <fullName>Expressone</fullName>
            </value>
            <value>
                <fullName>PickPost (La Poste)</fullName>
            </value>
            <value>
                <fullName>Geis</fullName>
            </value>
            <value>
                <fullName>Intime</fullName>
            </value>
            <value>
                <fullName>Czech Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>