force-app/main/default/objects/Lead/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State / Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antwerp</fullName>
            </value>
            <value>
                <fullName>Walloon Brabant</fullName>
            </value>
            <value>
                <fullName>Hainaut</fullName>
            </value>
            <value>
                <fullName>Liège</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Namur</fullName>
            </value>
            <value>
                <fullName>East Flanders</fullName>
            </value>
            <value>
                <fullName>Flemish Brabant</fullName>
            </value>
            <value>
                <fullName>West Flanders</fullName>
            </value>
            <value>
                <fullName>Drenthe</fullName>
            </value>
            <value>
                <fullName>Flevoland</fullName>
            </value>
            <value>
                <fullName>Friesland</fullName>
            </value>
            <value>
                <fullName>Gelderland</fullName>
            </value>
            <value>
                <fullName>Groningen</fullName>
            </value>
            <value>
                <fullName>Noord-Brabant</fullName>
            </value>
            <value>
                <fullName>Noord-Holland</fullName>
            </value>
            <value>
                <fullName>Overijssel</fullName>
            </value>
            <value>
                <fullName>Utrecht</fullName>
            </value>
            <value>
                <fullName>Zuid-Holland</fullName>
            </value>
            <value>
                <fullName>Limburg</fullName>
            </value>
            <value>
                <fullName>Lux</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>Zeeland</fullName>
            </value>
            <value>
                <fullName>Aargau</fullName>
            </value>
            <value>
                <fullName>Appenzell Innerrhoden</fullName>
            </value>
            <value>
                <fullName>Appenzell Ausserrhoden</fullName>
            </value>
            <value>
                <fullName>Bern</fullName>
            </value>
            <value>
                <fullName>Basel-Landschaft</fullName>
            </value>
            <value>
                <fullName>Basel-Stadt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>