force-app/main/default/objects/Lead/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect Cible</fullName>
            </value>
            <value>
                <fullName>Prospect Froid</fullName>
            </value>
            <value>
                <fullName>Prospect Chaud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>