force-app/main/default/objects/Lead/fields/Tech_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Tech_CountryCode__c</fullName>
    <label>Tech CountryCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>HU</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>