force-app/main/default/objects/Lead/fields/Tech_Operateur__c.field-meta.xml
<CustomField>
    <fullName>Tech_Operateur__c</fullName>
    <description>Ce champ est utilisé pour le partage des propsects au sein d&#39;un même opérateur.</description>
    <label>Tech_Operateur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_OPE</valueSetName>
    </valueSet>
</CustomField>