force-app/main/default/objects/Lead/fields/Type_de_point__c.field-meta.xml
<CustomField>
    <fullName>Type_de_point__c</fullName>
    <label>Type de point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_TYP</valueSetName>
    </valueSet>
</CustomField>