force-app/main/default/objects/Lead/fields/Zone_d_implantation__c.field-meta.xml
<CustomField>
    <fullName>Zone_d_implantation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone d&#39;implantation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 4 AND 5) OR (1 AND 2 AND 3)</booleanFilter>
        <filterItems>
            <field>Secteur__c.Selectionnable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Secteur__c.Pays__c</field>
            <operation>equals</operation>
            <valueField>$Source.Tech_CountryCode__c</valueField>
        </filterItems>
        <filterItems>
            <field>Secteur__c.Type_de_secteur__c</field>
            <operation>equals</operation>
            <value>Zone de conso</value>
        </filterItems>
        <filterItems>
            <field>$Source.Tech_CountryCode__c</field>
            <operation>equals</operation>
            <value>FR</value>
        </filterItems>
        <filterItems>
            <field>Secteur__c.Type_de_secteur__c</field>
            <operation>equals</operation>
            <value>Cluster</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Secteur__c</referenceTo>
    <relationshipLabel>Pistes</relationshipLabel>
    <relationshipName>Pistes</relationshipName>
    <type>Lookup</type>
</CustomField>