force-app/main/default/objects/Lead/recordTypes/DPD_Belgique_Prospect.recordType-meta.xml
<RecordType>
    <fullName>DPD_Belgique_Prospect</fullName>
    <active>true</active>
    <businessProcess>Processus Prospection</businessProcess>
    <label>DPD_Belgique_Prospect</label>
</RecordType>