force-app/main/default/objects/Lead/recordTypes/DPD_Hongrie_Prospect.recordType-meta.xml
<RecordType>
    <fullName>DPD_Hongrie_Prospect</fullName>
    <active>true</active>
    <businessProcess>Processus Prospection</businessProcess>
    <label>DPD_Hongrie_Prospect</label>
</RecordType>