force-app/main/default/objects/Lead/recordTypes/DPD_Pays_Bas_Prospect.recordType-meta.xml
<RecordType>
    <fullName>DPD_Pays_Bas_Prospect</fullName>
    <active>true</active>
    <businessProcess>Processus Prospection</businessProcess>
    <label>DPD_Pays-Bas_Prospect</label>
</RecordType>