force-app/main/default/objects/Lead/recordTypes/DPD_Republique_Tcheque_Prospect.recordType-meta.xml
<RecordType>
    <fullName>DPD_Republique_Tcheque_Prospect</fullName>
    <active>true</active>
    <businessProcess>Processus Prospection</businessProcess>
    <label>DPD_Republique_Tcheque_Prospect</label>
</RecordType>