force-app/main/default/objects/Lead/recordTypes/PUS_FR_Prospect.recordType-meta.xml
<RecordType>
    <fullName>PUS_FR_Prospect</fullName>
    <active>true</active>
    <businessProcess>Processus Prospection</businessProcess>
    <label>PUS_FR_Prospect</label>
</RecordType>