force-app/main/default/objects/Lead/validationRules/PRO_VR05_Motif_non_interesse.validationRule-meta.xml
<ValidationRule>
    <fullName>PRO_VR05_Motif_non_interesse</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(NOT( $User.BypassValidationRule__c ),
ISPICKVAL( Interesse__c  ,&quot;Non&quot;),
ISPICKVAL(  Motif_non_interesse__c  ,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Motif_non_interesse__c</errorDisplayField>
    <errorMessage>Veuillez indiquer le&quot; Motif de non intéressé&quot;.</errorMessage>
</ValidationRule>