force-app/main/default/objects/Lead/validationRules/PRO_VR06_Motif_non_eligible.validationRule-meta.xml
<ValidationRule>
    <fullName>PRO_VR06_Motif_non_eligible</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(NOT( $User.BypassValidationRule__c ),
ISPICKVAL(Commerce_eligible__c ,&quot;Non&quot;),
ISPICKVAL( Motif_d_ineligibilite__c ,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Motif_d_ineligibilite__c</errorDisplayField>
    <errorMessage>Veuillez indiquer le &quot;Motif d&#39;inéligibilité&quot;.</errorMessage>
</ValidationRule>