force-app/main/default/objects/Lead/validationRules/PRO_VR08_VisiteOui_source_oblig.validationRule-meta.xml
<ValidationRule>
    <fullName>PRO_VR08_VisiteOui_source_oblig</fullName>
    <active>true</active>
    <description>Si &quot;Commerce visité&quot; égal à oui, alors &quot;Source&quot;</description>
    <errorConditionFormula>AND
( NOT( $User.BypassValidationRule__c ),
ISPICKVAL(  Status  , &quot;Oui&quot;),

ISPICKVAL(  LeadSource  ,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Si Commerce visité égal Oui, veuillez remplir le champ
&quot;Source&quot;.</errorMessage>
</ValidationRule>