force-app/main/default/objects/Lead/validationRules/PRO_VR14_Code_postaux.validationRule-meta.xml
<ValidationRule>
    <fullName>PRO_VR14_Code_postaux</fullName>
    <active>true</active>
    <description>Oblige à composer 5 chiffres pour le code postal.</description>
    <errorConditionFormula>AND( NOT($User.BypassValidationRule__c),
 TEXT(Country__c)  = &quot;France&quot;, 

NOT(REGEX(  Postal_Code__c , &quot;[0-9]{5}&quot;)) || LEN(  Postal_Code__c ) !=5)</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Veuillez remplir les codes postaux français avec 5 chiffres.</errorMessage>
</ValidationRule>