force-app/main/default/objects/Lead/validationRules/PRO_VR19_MailObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>PRO_VR19_MailObligatoire</fullName>
    <active>true</active>
    <description>Le champ Email est obligatoire pour un prospect chaud - Applicable en fonction RT dans Label RT_Email_Obligatoire</description>
    <errorConditionFormula>AND (NOT($User.BypassValidationRule__c),
      CONTAINS($Label.RT_Email_Obligatoire,RecordTypeId),
        ISPICKVAL( Status ,&quot;Oui&quot;), 
        ISPICKVAL( Commerce_eligible__c ,&quot;Oui&quot;), 
        ISPICKVAL( Interesse__c ,&quot;Oui&quot;), 
        ISBLANK(Email)
        )</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Veuillez indiquer Email du Prospect.</errorMessage>
</ValidationRule>