force-app/main/default/objects/Lead/validationRules/PRO_VRO09_Prenom.validationRule-meta.xml
<ValidationRule>
    <fullName>PRO_VRO09_Prenom</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
Not($User.BypassValidationRule__c),
ISBLANK( FirstName ),
OR(
ISPICKVAL( Status , &quot;Oui&quot;), 
 CONTAINS($Label.RT_Prospect_INTER,  RecordType.Id ))
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Veuillez indiquer le &quot;Prénom&quot;</errorMessage>
</ValidationRule>