force-app/main/default/objects/Lead/listViews/AllProspects.listView-meta.xml
<ListView>
    <fullName>AllProspects</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les prospects</label>
    <language>fr</language>
    <sharedTo>
        <role>Administrateur</role>
        <roleAndSubordinates>DPD_BNL</roleAndSubordinates>
        <roleAndSubordinates>PUS_France</roleAndSubordinates>
    </sharedTo>
</ListView>